--- a/style.css
+++ b/style.css
@@ -1,8 +1,96 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
+}
+
+:root {
+    --text-color-coffee: #6F4E37;
+}
+
+.container {
+    border: 2px solid red;
+    max-width: 1024px;
+    margin: 20px auto;
+    /* height: 100vh; */
+}
+
+.hero-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 10px;
+}
+
+.hero-title .hero-text {
+    font-size: 35px;
+    font-weight: 700;
+    color: var(--text-color-coffee);
+}
+
+.text-family {
+    font-family: 'Lobster', cursive;
+    letter-spacing: 3px;
+}
+
+.btn {
+    padding: 10px 15px;
+    margin: 10px 0;
+    background-image: linear-gradient(to right, green , var(--text-color-coffee));
+    color: white;
+    font-size: 18px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.btn:hover {
+    background-image: linear-gradient(to right, var(--text-color-coffee), green)
+}
+
+.hero-title-additional-info {
+    font-size: 16px;
+    color: rgb(160, 150, 150);
+    margin: 15px 0;
+}
+
+.hero-image {
+    max-width: 350px;
+    max-height: 350px;
+    /* border: 2px solid green; */
+}
+
+.hero-image .img {
+    width: 100%;
+    height: 100%;
+}
+
+.hero-featured-1,
+.hero-featured-2,
+.hero-featured-3 {
+    display: flex;
+    align-items: center;
+    /* border: 1px solid red; */
+    margin: 10px 0px;
+    padding: 5px 2px;
+}
+
+.hero-featured-img {
+    border: 2px solid var(--text-color-coffee);
+    border-radius: 15px;
+}
+
+.hero-featured-text {
+    margin-left: 7px;
+    font-weight: 600;
+}
+
+@media (max-width: 768px){
+    .hero-section {
+        display: flex;
+        flex-direction: column;
+    }
 }
