--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@
 
 .heading {
     text-align: center;
-    font-size: 30px;
-    font-weight: 600;
+    font-size: 32px;
+    font-weight: 700;
     padding: 5px 2px;
     color: var(--text-color-coffee);
 }
@@ -55,7 +55,7 @@
 .btn {
     padding: 10px 15px;
     margin: 10px 0;
-    background-image: linear-gradient(to right, green , var(--text-color-coffee));
+    background-image: linear-gradient(to right, green, var(--text-color-coffee));
     color: white;
     font-size: 18px;
     border: none;
@@ -117,6 +117,7 @@
 .hero-featured-text {
     margin-left: 7px;
     font-weight: 600;
+    color: rgb(160, 150, 150);
 }
 
 /* hero section end */
@@ -132,13 +133,13 @@
 
 .box {
     margin-top: 150px;
-    background: rgb(192, 172, 159);
+    background: #FFE4D3;
     /* border: 2px solid blue; */
     border-top-left-radius: 40px;
     border-bottom-right-radius: 40px;
-    
+
     min-height: 300px;
-    
+
 }
 
 .feature-image-div {
@@ -160,11 +161,13 @@
 
 .feature-image-text {
     position: absolute;
-    bottom: 2%;
-    left: 20%;
+    bottom: -3%;
+    right: 22%;
     color: aqua;
-    font-size: 18px;
-    font-weight: 700;
+    background: var(--text-color-coffee);
+    padding: 5px 3px;
+    border-radius: 10px;
+    font-size: 12px;
     letter-spacing: 1px;
 }
 
@@ -176,18 +179,83 @@
 
 
 
+/* coffee masonry start  */
+.coffee-masonry {
+    padding-top: 100px;
+
+    display: flex;
+    justify-content: center;
+    gap: 30px;
+}
+
+.coffee-masonry-gallary {
+    display: flex;
+    flex-basis: 50%;
+}
+
+.coffee-masonry-gallary-box {
+    columns: 2;
+}
+
+.coffee-masonry-gallary-box img {
+    border-radius: 5px;
+    margin-bottom: 10px;
+}
+
+.coffee-masonry-description {
+    display: flex;
+    flex-basis: 50%;
+}
+
+.coffee-masonry-box {
+    padding: 5px 5px;
+}
+
+.masonry-offer-text {
+    font-size: 32px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    color: var(--text-color-coffee);
+}
+
+.unique-taste {
+    padding: 30px 0;
+}
+
+.unique-taste .unique-text {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.premium-quality {
+    padding: 30px 0;
+}
+
+.premium-quality .premium-text {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+/* coffee masonry end  */
 
 
 
 
-@media (max-width: 768px){
+
+
+
+
+
+
+@media (max-width: 768px) {
     .hero-section {
         display: flex;
         flex-direction: column;
     }
 
     .box {
-        background: rgb(192, 172, 159);
+
+        background: #FFE4D3;
         /* border: 2px solid green; */
     }
 
@@ -200,4 +268,33 @@
     .feature-image {
         margin-top: 0;
     }
+
+
+
+    /* coffee masonry */
+    .coffee-masonry {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+    }
+
+    .coffee-masonry-gallary {
+        display: flex;
+        order: 2;
+    }
+
+    .coffee-masonry-description {
+        display: flex;
+        order: 1;
+    }
+
+    .coffee-masonry-gallary-box {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+    }
+
+
 }
