--- a/style.css
+++ b/style.css
@@ -309,6 +309,7 @@
     margin-top: 5px;
     color: black;
 }
+
 .feedback-occupation {
     font-size: 12px;
 }
@@ -337,7 +338,84 @@
 
 
 
+/*  news and events start  */
+.news-and-events {
+    margin-top: 100px;
+}
 
+.news-and-events-description {
+    max-width: 700px;
+    margin: auto;
+}
+
+.news-and-events-card-section {
+    margin-top: 30px;
+}
+
+.news-and-events-card-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    flex-wrap: wrap;
+}
+
+.news-and-events-card-item {
+    width: 300px;
+    height: 400px;
+    padding: 15px;
+    border: 1px solid var(--text-color-coffee);
+    border-radius: 15px;
+}
+
+.news-and-events-card-item img {
+    width: 100%;
+    height: 50%;
+    border-radius: 15px;
+}
+
+.news-and-events-description {
+    margin-top: 40px;
+}
+
+.news-and-events-description .date {
+    font-size: 12px;
+    color: #A09696;
+}
+
+.news-and-events-description .discount {
+    font-size: 24px;
+    font-weight: 500;
+    margin: 5px 0;
+}
+
+.news-and-events-description .learn-more {
+    font-weight: 700;
+    cursor: pointer;
+}
+
+.news-and-events-description .learn-more:hover {
+    color: var(--text-color-coffee);
+}
+/*  news and events end  */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* responsive start */
 @media (max-width: 768px) {
     .hero-section {
         display: flex;
@@ -362,7 +440,7 @@
 
 
 
-    /* coffee masonry */
+    /* coffee masonry start */
     .coffee-masonry {
         display: flex;
         flex-direction: column;
@@ -386,6 +464,9 @@
         flex-direction: column;
         gap: 20px;
     }
+
+    /* coffee masonry end */
+
 
 
 
