--- a/style.css
+++ b/style.css
@@ -107,7 +107,9 @@
     align-items: center;
     /* border: 1px solid red; */
     margin: 10px 0px;
-    padding: 5px 2px;
+    padding: 7px 5px;
+    border-radius: 15px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .hero-featured-img {
@@ -485,6 +487,10 @@
         display: flex;
         flex-direction: column;
     }
+    
+    .hero-title {
+        padding: 0 15px;
+    }
 
     .box {
 
@@ -521,6 +527,10 @@
     .coffee-masonry-description {
         display: flex;
         order: 1;
+    }
+
+    .coffee-masonry-box {
+        padding: 0 15px;
     }
 
     .coffee-masonry-gallary-box {
